force-app/main/default/objects/et4ae5__Triggered_Send_Execution__c/fields/et4ae5__Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>