force-app/main/default/objects/et4ae5__Triggered_Send_Execution__c/fields/et4ae5__Status__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Requeued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>