force-app/main/default/objects/et4ae5__Triggered_Send_Execution__c/fields/et4ae5__Triggered_Send__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Triggered_Send__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Triggered Send</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Trggered Send must be active in order to be selected.</errorMessage>
        <filterItems>
            <field>et4ae5__Automated_Send__c.et4ae5__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>et4ae5__Automated_Send__c</referenceTo>
    <relationshipLabel>Triggered Send Executions</relationshipLabel>
    <relationshipName>Triggered_Send_Executions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>