force-app/main/default/objects/et4ae5__Triggered_Send_Execution__c/fields/et4ae5__Triggering_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Triggering_Record_Id__c</fullName>
    <label>Triggering Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>